--- a/force-app/main/default/lwc/contributionsGraph/contributionsGraph.css
+++ b/force-app/main/default/lwc/contributionsGraph/contributionsGraph.css
@@ -5,10 +5,16 @@
   --borderRadius-medium: 0.375rem;
   --fgColor-muted: #9198a1;
   --h6-size: 12px;
+  --h4-size: 1rem;
   --base-size-4: 4px;
   --base-size-8: 8px;
   --base-size-16: 16px;
   --bgColor-black: #010409;
+  --slds-g-color-neutral-base-100: #010409;
+  --slds-g-shadow-outline-focus-1: #39d353;
+  --slds-g-color-neutral-base-95: #010409;
+  --slds-g-shadow-inset-focus-1: #39d353;
+  --slds-g-color-neutral-base-10: #f0f6fc;
   --fgColor-default: #f0f6fc;
   --base-text-weight-normal: 400;
   --color-calendar-graph-day-bg: #161b22;
@@ -45,6 +51,11 @@
   --color-project-gradient-in: #161b22;
   --color-project-gradient-out: rgba(22, 27, 34, 0);
   --color-diff-blob-selected-line-highlight-mix-blend-mode: screen;
+  box-sizing: border-box;
+}
+
+.total-contributions {
+  font-size: var(--h4-size);
 }
 
 .wrapper {
@@ -55,8 +66,9 @@
   color: var(--fgColor-default);
   background-color: var(--bgColor-black);
 }
-* {
-  box-sizing: border-box;
+
+.THIS .slds-form-element__label {
+  color: var(--fgColor-default) !important;
 }
 
 .d-flex {
@@ -156,28 +168,74 @@
   outline-offset: -1px;
 }
 
-.ContributionCalendar-day[data-level="4"] {
+[data-theme="halloween"] .ContributionCalendar-day[data-level="4"] {
+  fill: var(--color-calendar-halloween-graph-day-L4-bg);
+  background-color: var(--color-calendar-halloween-graph-day-L4-bg);
+  outline: 1px solid var(--color-calendar-graph-day-L4-border);
+}
+
+[data-theme="halloween"] .ContributionCalendar-day[data-level="3"] {
+  fill: var(--color-calendar-halloween-graph-day-L3-bg);
+  background-color: var(--color-calendar-halloween-graph-day-L3-bg);
+  outline: 1px solid var(--color-calendar-graph-day-L3-border);
+}
+
+[data-theme="halloween"] .ContributionCalendar-day[data-level="2"] {
+  fill: var(--color-calendar-halloween-graph-day-L2-bg);
+  background-color: var(--color-calendar-halloween-graph-day-L2-bg);
+  outline: 1px solid var(--color-calendar-graph-day-L2-border);
+}
+[data-theme="halloween"] .ContributionCalendar-day[data-level="1"] {
+  fill: var(--color-calendar-halloween-graph-day-L1-bg);
+  background-color: var(--color-calendar-halloween-graph-day-L1-bg);
+  outline: 1px solid var(--color-calendar-graph-day-L1-border);
+}
+
+[data-theme="winter"] .ContributionCalendar-day[data-level="4"] {
+  fill: var(--color-calendar-winter-graph-day-L4-bg);
+  background-color: var(--color-calendar-winter-graph-day-L4-bg);
+  outline: 1px solid var(--color-calendar-graph-day-L4-border);
+}
+
+[data-theme="winter"] .ContributionCalendar-day[data-level="3"] {
+  fill: var(--color-calendar-winter-graph-day-L3-bg);
+  background-color: var(--color-calendar-winter-graph-day-L3-bg);
+  outline: 1px solid var(--color-calendar-graph-day-L3-border);
+}
+
+[data-theme="winter"] .ContributionCalendar-day[data-level="2"] {
+  fill: var(--color-calendar-winter-graph-day-L2-bg);
+  background-color: var(--color-calendar-winter-graph-day-L2-bg);
+  outline: 1px solid var(--color-calendar-graph-day-L2-border);
+}
+[data-theme="winter"] .ContributionCalendar-day[data-level="1"] {
+  fill: var(--color-calendar-winter-graph-day-L1-bg);
+  background-color: var(--color-calendar-winter-graph-day-L1-bg);
+  outline: 1px solid var(--color-calendar-graph-day-L1-border);
+}
+
+[data-theme="default"] .ContributionCalendar-day[data-level="4"] {
   fill: var(--color-calendar-graph-day-L4-bg);
   background-color: var(--color-calendar-graph-day-L4-bg);
   outline: 1px solid var(--color-calendar-graph-day-L4-border);
 }
 
-.ContributionCalendar-day[data-level="2"] {
+[data-theme="default"] .ContributionCalendar-day[data-level="2"] {
   fill: var(--color-calendar-graph-day-L2-bg);
   background-color: var(--color-calendar-graph-day-L2-bg);
   outline: 1px solid var(--color-calendar-graph-day-L2-border);
 }
 
-.ContributionCalendar-day[data-level="1"] {
-  fill: var(--color-calendar-graph-day-L1-bg);
-  background-color: var(--color-calendar-graph-day-L1-bg);
-  outline: 1px solid var(--color-calendar-graph-day-L1-border);
-}
-
-.ContributionCalendar-day[data-level="3"] {
+[data-theme="default"] .ContributionCalendar-day[data-level="3"] {
   fill: var(--color-calendar-graph-day-L3-bg);
   background-color: var(--color-calendar-graph-day-L3-bg);
   outline: 1px solid var(--color-calendar-graph-day-L3-border);
+}
+
+[data-theme="default"] .ContributionCalendar-day[data-level="1"] {
+  fill: var(--color-calendar-graph-day-L1-bg);
+  background-color: var(--color-calendar-graph-day-L1-bg);
+  outline: 1px solid var(--color-calendar-graph-day-L1-border);
 }
 
 tr {
