--- a/force-app/main/default/lwc/contributionsGraph/contributionsGraph.css
+++ b/force-app/main/default/lwc/contributionsGraph/contributionsGraph.css
@@ -15,6 +15,7 @@
   --slds-g-color-neutral-base-95: #010409;
   --slds-g-shadow-inset-focus-1: #39d353;
   --slds-g-color-neutral-base-10: #f0f6fc;
+  --dxp-s-dropdown-text-color-hover: #151b23;
   --fgColor-default: #f0f6fc;
   --base-text-weight-normal: 400;
   --color-calendar-graph-day-bg: #161b22;
@@ -52,6 +53,7 @@
   --color-project-gradient-out: rgba(22, 27, 34, 0);
   --color-diff-blob-selected-line-highlight-mix-blend-mode: screen;
   box-sizing: border-box;
+  background-color: var(--bgColor-black);
 }
 
 .total-contributions {
@@ -101,6 +103,12 @@
 .border {
   border: var(--borderWidth-thin) solid var(--borderColor-default) !important;
 }
+
+.scroll {
+  max-width: 100%;
+  overflow-x: auto;
+  overflow-y: hidden;
+}
 .float-right {
   float: right !important;
 }
@@ -138,6 +146,12 @@
   width: 100% !important;
 }
 
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .py-2 {
   padding-top: var(--base-size-8) !important;
   padding-bottom: var(--base-size-8) !important;
@@ -146,9 +160,12 @@
 .graph-before-activity-overview {
   border-top-left-radius: var(--borderRadius-medium);
   border-top-right-radius: var(--borderRadius-medium);
-  width: fit-content;
+  width: 100%;
+  background-color: var(--bgColor-black);
 }
-
+.wrapper {
+  background-color: var(--bgColor-black);
+}
 .ContributionCalendar-label {
   padding: 0.125em 0.5em 0.125em 0;
   font-size: 12px;
